2010-09-30  Avi Drissman  <avi@google.com>

Reviewed by Kenneth Russell.

        [Chromium] Tabbing into page doesn't always select the first element
        https://bugs.webkit.org/show_bug.cgi?id=46856

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setInitialFocus):

git-svn-id: svn://svn.chromium.org/blink/trunk@68765 bbb929c8-8fbe-4397-9dbb-9b2b20218538